# campfire

./: .dockerignore  .gitignore  CITATIONS.md  DEMO_PREPARATION.md  Dockerfile  INSTALLATION_VERIFICATION.md  LICENSE  LICENSES.md  Makefile  README.md  VIDEO_SCRIPT.md  deployment.env  docker-compose.yml  policy.md  pyproject.toml  uv.toml
backend/src/campfire/: __init__.py  cli.py
backend/src/campfire/api/: __init__.py  audit.py  auth.py  main.py  models.py
backend/src/campfire/corpus/: __init__.py  chunker.py  cli.py  database.py  extractor.py  ingestion.py
backend/src/campfire/critic/: __init__.py  critic.py  example.py  policy.py  types.py
backend/src/campfire/harmony/: README.md  __init__.py  agent.py  agent_example.py  browser.py  browser_example.py  browser_tool.py  engine.py  example.py  types.py
backend/src/campfire/llm/: __init__.py  base.py  factory.py  lmstudio_provider.py  ollama_provider.py  vllm_provider.py
backend/tests/: conftest.py  run_comprehensive_tests.py  test_citation_accuracy.py  test_emergency_scenarios.py  test_end_to_end.py  test_offline_validation.py  test_performance.py  test_safety_critic_integration.py
backend/tests/test_api/: __init__.py  test_admin_endpoints.py  test_audit.py  test_main.py
backend/tests/test_corpus/: __init__.py  test_chunker.py  test_database.py  test_extractor.py  test_ingestion.py  test_integration.py
backend/tests/test_critic/: __init__.py  test_critic.py  test_integration.py  test_policy.py
backend/tests/test_harmony/: __init__.py  test_agent.py  test_browser.py  test_browser_tool.py  test_engine.py  test_types.py
backend/tests/test_llm/: __init__.py  test_base.py  test_factory.py  test_lmstudio_provider.py  test_ollama_provider.py  test_vllm_provider.py
corpus/raw/: .gitkeep
docker/: healthcheck.sh  startup.sh
docs/: deployment.md  troubleshooting.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: .gitkeep  App.css  App.test.tsx  App.tsx  index.css  types.ts
frontend/src/components/: AdminPanel.css  AdminPanel.test.tsx  AdminPanel.tsx  ChatInterface.css  ChatInterface.test.tsx  ChatInterface.tsx  DocumentViewer.css  DocumentViewer.tsx  LoadingIndicator.css  LoadingIndicator.tsx  MessageCard.css  MessageCard.tsx  OfflineIndicator.css  OfflineIndicator.test.tsx  OfflineIndicator.tsx  OfflineValidation.test.tsx  ScenarioShortcuts.css  ScenarioShortcuts.test.tsx  ScenarioShortcuts.tsx  StepCard.css  StepCard.test.tsx  StepCard.tsx
scripts/: .gitkeep  backup_restore.py  demo_corpus.py  download_documents.py  ingest_corpus.py  smoke_test.py  startup_health_check.py  validate_config.py  verify_corpus.py
